--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: DSS
 Title: Dispersion shrinakge for sequencing data.
-Version: 2.4.0
+Version: 2.4.1
 Date: 2014-3-20
 Imports: methods,bsseq,edgeR
 Author: Hao Wu <hao.wu@emory.edu>
-Depends: Biobase, locfdr
+Depends: Biobase,splines
 Maintainer: Hao Wu <hao.wu@emory.edu>
 Description: DSS is an R library performing differntial analysis for
         count-based sequencing data. It detectes differentially
