--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,8 @@ Package: DSS
 Title: Dispersion shrinakge for sequencing data.
 Version: 2.4.1
 Date: 2014-3-20
-Imports: methods,bsseq,edgeR
 Author: Hao Wu <hao.wu@emory.edu>
-Depends: Biobase,splines
+Depends: Biobase,bsseq,splines,methods
 Maintainer: Hao Wu <hao.wu@emory.edu>
 Description: DSS is an R library performing differntial analysis for
         count-based sequencing data. It detectes differentially
