--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,7 @@ Date: 2014-3-20
 Author: Hao Wu <hao.wu@emory.edu>
 Depends: Biobase,bsseq,splines,methods
 Maintainer: Hao Wu <hao.wu@emory.edu>
+Suggests: BiocStyle
 Description: DSS is an R library performing differntial analysis for
         count-based sequencing data. It detectes differentially
         expressed genes (DEGs) from RNA-seq, and differentially
