--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,6 @@ Description: DSS is an R library performing differntial analysis for
         Beta-Binomial distributions.
 License: GPL
 VignetteBuilder: knitr
-Suggests: BiocStyle, knitr, rmarkdown
+Suggests: BiocStyle, knitr, rmarkdown, edgeR
 biocViews: Sequencing, RNASeq, DNAMethylation,GeneExpression,
         DifferentialExpression,DifferentialMethylation
